--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -1,7 +1,7 @@
 {
   "projectType": "application",
   "sourceRoot": "apps/client/src",
-  "prefix": "fullstack-monorepo",
+  "prefix": "app",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
